--- a/.env
+++ b/.env
@@ -1,5 +1,6 @@
 mongo_url=mongodb+srv://goffood:gofood@cluster0.qlkoag7.mongodb.net/fitnation?retryWrites=true&w=majority&appName=Cluster0
 REACT_APP_URL=http://localhost:3000
+SERVER_URL=http://localhost:8080
 JWT_SECRET_KEY=thisisthejwtseceretkeyewhichassurethesecurity
 activationkey=aqqwsedrftgyhujikolppppp
 SMPT_MAIL=muhammadrehmanmusharafali@gmail.com
